fix contrast issues

--- a/css/480.css
+++ b/css/480.css
@@ -121,12 +121,6 @@ body {
   background: #e1e1e1;
 }
 
-.empty {
-  border: 5px dashed rgba(255,255,255,0.7);
-  color: #888;
-  margin-bottom: 10px;
-}
-
 .teaser a.button {
   position: absolute;
   width: 30%;
