--- a/css/768.css
+++ b/css/768.css
@@ -254,11 +254,6 @@ nav li a.active {
   background: #e1e1e1;
 }
 
-.empty {
-  border: 5px dashed rgba(255,255,255,0.7);
-  color: #888;
-}
-
 .promo p {
   width: 75%;
 }
